adds dark mode and half of width

--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   },
   "homepage": "https://github.com/jackmorrison12/pyplay#readme",
   "dependencies": {
+    "bootstrap": "4.4.1",
     "codemirror": "^5.51.0",
-    "node-static": "^0.7.11",
-    "bootstrap": "4.4.1"
+    "node-static": "^0.7.11"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
